infra/k8s-dev/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # ingress.kubernetes.io/secure-backends: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'http://localhost:4200'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"


    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE, PATCH"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/cors-allow-headers:
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "Access-Control-Allow-Origin: $http_origin";
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   auth_request_set $token5 $upstream_http_authorization;    
    #   add_header Set-Cookie "JWT_TOKEN=$token5";

    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/session-cookie-name: "express:sess"
    # nginx.ingress.kubernetes.io/session-cookie-samesite: 'None'
    # nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none: 'true'
    # nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    # nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"

    # traefik.ingress.kubernetes.io/session-secure:
    # traefik.ingress.kubernetes.io/session-http-only:
    # traefik.ngress.kubernetes.io/session-same-site: 'SameSite=Lax'
    # traefik.ingress.kubernetes.io/affinity: "true"
    # traefik.ingress.kubernetes.io/session-cookie-name: "sticky"

    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://worth-it.dev:80"
    # nginx.ingress.kubernetes.io/cors-allow-headers: "authorization"
spec:
  rules:
    - host: worth-it.dev
      http:
        paths:
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/annonces/?(.*)
            backend:
              serviceName: annonces-srv
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000
          - path: /api/comments/?(.*)
            backend:
              serviceName: comments-srv
              servicePort: 3000
          - path: /api/favorite/?(.*)
            backend:
              serviceName: favoris-srv
              servicePort: 3000
          - path: /api/discussion/?(.*)
            backend:
              serviceName: messages-srv
              servicePort: 3000
          - path: /api/vote/?(.*)
            backend:
              serviceName: voting-srv
              servicePort: 3000
          - path: /api/search/?(.*)
            backend:
              serviceName: search-srv
              servicePort: 3000
          - path: /api/wi/?(.*)
            backend:
              serviceName: worthit-srv
              servicePort: 3000
